[project]
name = "autotest-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.137.1",
    "huggingface-hub>=1.19.0",
    "mlx>=0.31.2",
    "mlx-lm>=0.31.3",
    "pydantic>=2.13.4",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.0",
    "ruff>=0.15.17",
]
